tool/tests/snapshots/dotnet_target__generation_using_library_config@MyLibException.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib;

#nullable enable

public partial class MyLibException : Exception
{
    private MyLibError _inner;

    public MyLibException(MyLibError inner) : base(inner.ToDisplay())
    {
        _inner = inner;
    }

    public MyLibError Inner
    {
        get
        {
            return _inner;
        }
    }
}

